# digital-garden

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
data/: similarities.json
digital_garden.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
notes/: a.md  b.md  c.md  example.md  plants.md  pytest.md  unittest.md  waffle.md
src/: cli.py  config.py  graph.py  nlp.py  nlp_engine.py  parser.py  semantic.py
src/digital_garden/: cli.py  graph.py  parser.py  semantic.py
src/digital_garden.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_nlp.py  test_parser.py  test_semantic.py
tests/fixtures/: test_note.md
